--- a/SharedForms/ChatForm.resx
+++ b/SharedForms/ChatForm.resx
@@ -117,7 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolRecordVoice.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEsSURBVDhP3VTBjcIwELSSmC/3O0FiRAlXAiVcJ3clUAIl
+        UAIdQAfwQDi8oAPo4G5nWVuGmODAj5FGSuLx7Hq9G/UItswntdHLetT7syZbW1P8yFJ31FX+DaMGKz0T
+        STfYqjhGDYn2U41Flo6YkSdlL7J0RI2E1uipyNIRM3J8E0PcHPecFDxm5GmK31t9A9zEJKboK7w3TAJC
+        iyz5+V62h7764A1lfsA79eE8NHHcmWxztd7WQhBDhAwQANmGZmj2/VB/8dpAn7YDfcazbG/CjRvEbhr8
+        8WgNmy+BsjUHSRlDdxQ2pZ9BmAEHpJJgHadpzS6EK/g97spikWzmwG1BR/J1pfohe5RAJM8haKfu0xHD
+        y4Z+AoT+RnEZwffW/guBPmODR6Txky0Cpf4B1sw7veXeJtsAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
