--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -148,6 +148,12 @@
   <data name="学生24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\学生24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="录音" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\录音.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="录音中" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\录音中.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="所有人" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\所有人.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
