--- a/NewTeacher/Properties/Resources.resx
+++ b/NewTeacher/Properties/Resources.resx
@@ -145,6 +145,12 @@
   <data name="屏幕" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\屏幕.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="录制" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\录制.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="未录制" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\未录制.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="查看" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\查看.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
