--- a/StudentUser/Login.resx
+++ b/StudentUser/Login.resx
@@ -121,7 +121,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAARcAAADICAYAAADCzKWaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAISNJREFUeF7tnQlwFNeZx+1knc0mm6OyqSSbyibZym6qsput9ZaTLWcNzKWRRtKc
+        vwAADr8BOAVTJAAAISNJREFUeF7tnQlwFNeZx+1knc0mm6OyqSSbyibZym6qsput9ZaTLWcNzKWRRtKc
         kkYXMzpBmpE4jcGAbYSNMWAOc/gAjMHY4AsDNviKDeaOsTGXMacPsMFcBiRxSEJgve2v+72hZ+aN5uqZ
         6R59/6pfwUy/fv26p/un7tfXTRgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwGg8Fg
         MBgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwG
@@ -268,4 +268,80 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>38</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUb2jAEHNdAABDfEAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQc
+        10AEHNdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABR3XwQYe
+        2P8EHNdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAEN8QBh7Y/wUe2M8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAFHdehBh7Y/wUd12AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAQc10AGHtj/BR3XwQAAAAAAAAAABRvaMAUd18EFHNiRAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAUd12AGHtj/Bh3YsQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAABRzYkQYe2P8GHteBAAAAAAAAAAAFHddgBh7Y/wUc2JEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAABDfEAUe2O8GHtj/ABjXIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQ3xAFHtjxBh7Y/wUb2jAAAAAAAAAAAAUd16EGHtj/BR7YcAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRzYkQYe2P8FHdfBAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABR3XoQYe2P8FHdi/AAAAAAAAAAAAEN8QBR7Y8QYe
+        2P8AGNcgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEN8QBh7Y3wYe2P8FHdehAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUe2HAGHtj/BR7Y7wAY1yAAAAAAAAAAAAUc
+        2JEGHtj/BR3XoQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFG9owBR7Y7wYe
+        2P8FHdfBABjXIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY1yAGHdixBh7Y/wYe2P8DHdlQAAAAAAAA
+        AAAFHddgBh7Y/wUe2O8AGNcgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAFG9owBh7Y3wYe2P8GHtj/Bh3YsQYe14EEHNdABBzXQAYe14EGHdixBh7Y/wYe2P8FHtjvBBzXQAAA
+        AAAAAAAABh7XgQYe2P8GHtj/BR3XYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAEN8QBh7ZfgUe2O8GHtj/Bh7Y/wYe2P8GHtj/Bh7Y/wYe2P8GHtj/BR3ZnwAQ
+        3xAFG9owBR7YcAYe1+EGHtj/Bh7Y/wUd12AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFG9owBR7Y8QYe2P8GHtj/BR3YvwUd2L8GHtj/Bh7Y/wYe
+        2P8FHddgAAAAAAUe2PEGHtj/Bh7Y/wUd2L8FG9owAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABDfEAYe1+EGHtj/Bh3YrwAQ3xAAAAAAAAAAAAAQ
+        3xAFHdiPBh7Y/wUe2PEAGNcgBR3XwQYe2P8GHtfhABDfEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFHthwBh7Y/wUd2L8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAFHNiRBh7Y/wUd16EDHdlQBh7Y3wYe2P8GHdixAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUd18EGHtj/BBzXQAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQ3xAGHtj/BR7Y8QAAAAAAEN8QBh7Y3wYe2P8EHNdAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABR7Y8QYe
+        2P8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAYe1+EGHtj/AAAAAAAAAAAFHddgBh7Y/wYd
+        2LEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAGHtfhBh7Y/wAY1yAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABh7Y/wYe2P8AAAAAAAAAAAAY
+        1yAGHtj/BR3Y0QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAYd2LEGHtj/BR7YcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQc10AGHtj/BR7YzwAA
+        AAAAAAAAABjXIAYe2P8GHtjfAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAABBzXQAYe2P8FHtjxBRvaMAAAAAAAAAAAAAAAAAAAAAAAGNcgBh7X4QYe
+        2P8FHddgAAAAAAAAAAADHdlQBh7Y/wYd2LEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABR3XoQYe2P8GHtj/BRzYkQQc10AEHNdABR7YcAUe
+        2PEGHtj/BR3YvwAAAAAAAAAAABDfEAYe1+EGHtj/BR3XYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRzYkQYe2P8GHtj/Bh7Y/wYe
+        2P8GHtj/Bh7Y/wYd2K8AEN8QAAAAAAQc10AGHtfhBh7Y/wUe2M8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjXIAUd
+        2I8FHdi/BR3YvwUd2Z8EHNdAAAAAAAUb2jAGHtj/Bh7Y/wYe2P8FHtjPABDfEAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABR3XoQYe2P8GHtjfBh7ZfgAQ3xAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////////////////////n//n/5//5z/P/8c/z//Of8f/jn/j/
+        5x/8f48//gwcf/+AOP//gGH//x4j//8/Ef/+f5n//n+c//5/nP/+f5z//z88//8OOf//gHH//+HD////
+        j/////////////////////////////////8=
+</value>
+  </data>
 </root>
