--- a/NewTeacher/Properties/Resources.resx
+++ b/NewTeacher/Properties/Resources.resx
@@ -136,12 +136,6 @@
   <data name="在线" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\在线.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="学生" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\学生.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="学生演示" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\学生演示.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="屏幕" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\屏幕.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -169,13 +163,16 @@
   <data name="群聊" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\群聊.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="老师" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\老师.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="视频直播" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\视频直播.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="远程控制" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\远程控制.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="主机端" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\主机端.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="客户端" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\客户端.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
