--- a/NewTeacher/Team/TeamDiscuss.resx
+++ b/NewTeacher/Team/TeamDiscuss.resx
@@ -124,66 +124,66 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACW
-        CgAAAk1TRnQBSQFMAgEBAgEAAZABAAGQAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACU
+        CgAAAk1TRnQBSQFMAgEBAgEAAZgBAAGYAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
         AwABFAMAAQEBAAEgBgABGRoAAygBPQNEAXk0AAMgAS8DSwGO/AADGAEhAV8CWAHjAxwBJywAAwYBCANV
         AbUDNgFZCAADPgFrAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHN
         AVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAyYBOKgA
-        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/
-        AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEP
-        AQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wMSARmwAAFM
-        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFnAQ8BAAH/AWcBDwEAAf8BZwEP
-        AQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFhAlgB5gFhAl0B4gFnAQ8BAAH/AV4CWgHVAWcBDwEA
-        Af8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWACWgHeuAABOgI5AWABagFB
-        ATMB+QNTAaoDDAEQDAADBAEGAz8BbQFiAUUBPQH2AVkCVwG/AwQBBhQAAV4CWwHZAWcBDwEAAf8BZwEP
-        AQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wE9AjwBZwFOAk0BlgFnAQ8BAAH/AzcCWgJYAcABZwEP
-        AQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AUcCRgGAvAADHAEoA04BmQFVATQBJQH9
-        AWECWgHkAVwCWQHMAWACWgHeAVoCQgH1AVwCWAHRAykBPhwAAzwBZgFnAQ8BAAH/AWcBDwEAAf8BZwEP
-        AQAB/wFnAQ8BAAH/AWIBVAFSAe8DGQEjAz0BaQFnAQ8BAAH/AycBOwMwAUsBVQE0ASUB/QFnAQ8BAAH/
-        AWcBDwEAAf8BZwEPAQAB/wFlAUoBRQH0AyMBM7gAAwcBCgNFAX0BYgFVAVIB7wFTAk8BpQM1AVYDEwEa
-        AysEQgF1AWECXAHcAVYCVQGxAxgBIRgAAwsBDwFWAlUBtAFhAloB5AFqAT8BMwH5AWcBDwEAAf8BXAJY
-        AdEDBgEIAU8CTgGXAV4CXAHOAzUBVwMVAR0BYgJYAekBZwEPAQAB/wFaAkIB9QFeAlgB3QNMAZMDBAEG
-        tAADBAEFAVoCVwG9AVgCVgHBAxkBIwMBAQIPAAEBAxABFQNEAXoBZAJZAewDGgEkGAADAgEDAxIBGAMf
-        ASwBUgJQAaMBUgJRAaEDBwEKA1EBogNWAbYBRQJEAXwDCgEOAV4CWwHZAUoCSQGJAx0BKQMNARK8AANB
-        AXIBZAJZAewDFgEfHAADCAELA1EBogFYAlYBuSgAAx4BKwFNAkwBkQMYASIEAAMtAUYDSgGKAxMBGsgA
-        AV4CWwHZAyEBMCgAAV4CWwHZAyMBMyQAAUcCRgGAAxMBGgwAAx8BLQMuAUfEAAMgAS4BYAJcAdQsAAFV
-        AlMBrQFOAk0BlSAAAw0BEQFSAlABpBAAAwoBDgNQAZoDBAEGwAADPAFmA1YBtgMgAS4DTAGSAVwCWgHN
-        AVwCWgHNA0wBkwMgAS4DBAEFBAADDQESA0IBdgFnAQ8BAAH/AWcBDwEAAf8BXAJZAcwgAANIAYUDJgE5
-        AUgCRwGDAzsBZQMFAQcDQwF3AT0CPAFnAzsBYwE+Aj0BasAAAzwBZgFnAVEBTgHyAWoBQQEzAfkBZwEP
-        AQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFqAUEBMwH5A0oBjQMNARIDWQHHAWcBDwEAAf8BZwEP
-        AQAB/wFnAQ8BAAH/AVwCWQHMIAABRgJFAX4DGAEiAxoBJQM3AVoBSQJIAYcDKAE9AyYBOAMYASIBRwJG
-        AYHAAAM1AVcBZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEP
-        AQAB/wFnAQ8BAAH/AWECWwHhAWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BVwJWAbggAAFM
-        AksBjwMwAUwBPQI8AWcDOAFeAxsBJgM6AWIDOgFhAzUBVwFFAkQBfMQAAWIBRQE9AfYBZwEPAQAB/wFn
-        AQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEA
-        Af8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8DNwFaIAADTgGYAj0BPAFnFAADTgGZAzEBTcQAA0sBjgFn
-        AQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEA
-        Af8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BXAJYAdEDBwEKIAADTgGYA0gBhgQAAwYBCAMcAScEAAMI
-        AQsBXQJZAdcDMQFNxAADFgEeAV8CVwHoAWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEP
-        AQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWYBKwElAfwCMQEwAU0kAAFGAkUBfgFn
-        AVEBTgHyA0QBeQFdAlkB0gFnAQ8BAAH/A1MBqgNRAaIBWgJCAfUDIAEuyAADFQEdAWACWwHWAWcBDwEA
-        Af8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBDwEAAf8BXQJOAfADLwFJ
-        AwIBAyQAAxgBIgFaAkIB9QFnAQ8BAAH/AWcBDwEAAf8BZwEPAQAB/wFnAQ8BAAH/AWcBUQFOAfIDLgFI
-        0AADFQEdAU0CTAGRAV4CWgHYAV8BIwEhAfsBZwEPAQAB/wFnAQ8BAAH/AWUCXgHlAVUCUwGtAyUBNzAA
-        AyEBMANRAaIBXAJZAcwBXAJZAcwBWAJWAbkDOAFdAwEBAuAAAyEBMAMEAQb/ABEAAUIBTQE+BwABPgMA
-        ASgDAAFQAwABFAMAAQEBAAEBBQAB8BcAA/8BAAHPAf8BnwL/BwABxwH/ARgJAAHHAf8BGAkAAfEB/AE4
-        AQABAQcAAfgBcAF8AQABAQcAAfwBAQH8AQABAQcAAfgBAAH8AQABAQcAAfABcAF+AQABBwcAAfEB/AF/
-        AeIBPwcAAfMB/wE/AecBPwcAAecB/wE/Ac8BHwcAAeABCAE/AcABHwcAAeABAAE/AcABHwcAAeABAAE/
-        AcABHwcAAfABAAE/Ac8BnwcAAfABAAE/AckBHwcAAfABAAF/AcABHwcAAfgBAAF/AcABPwcAAfwBAQH/
-        AeABPwcAAf8BzwP/BwAL
-</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnAddStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACQAAAAYCAYAAACSuF9OAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsPAAALDwGS+QOlAAAABmJL
-        R0QAAAAAAAD5Q7t/AAAAj0lEQVRIS+2WQQqAIBREO4rXyVt5VCHsGOVfDLQIxj8GSjjwIF6bh7loCynv
-        lVK5BmMNuwXNEAOKBb29GMYKYqwghjsIY05FOiGMOQX5k2HMeem6QxhzHrovNcZcK91BBsZcC/86IYw5
-        D3IQxpwXKQhjTsEdhDGn0n2pv2YFMaYMmukn/7SgaA8POYojpBxv1o2xX8GhcRQAAAAASUVORK5CYII=
+        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/
+        AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEO
+        AQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wMSARmwAAFM
+        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFmAQ4BAAH/AWYBDgEAAf8BZgEO
+        AQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFhAlgB5gFhAl0B4gFmAQ4BAAH/AV4CWgHVAWYBDgEA
+        Af8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWACWgHeuAABOgI5AWABagFB
+        ATUB+QNTAaoDDAEQDAADBAEGAz8BbQFiAUcBPwH2AVkCVwG/AwQBBhQAAV4CWwHZAWYBDgEAAf8BZgEO
+        AQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wE9AjwBZwFOAk0BlgFmAQ4BAAH/AzcCWgJYAcABZgEO
+        AQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AUcCRgGAvAADHAEoA04BmQFUATUBJgH9
+        AWECWgHkAVwCWQHMAWACWgHeAVkCQgH1AVwCWAHRAykBPhwAAzwCZgEOAQAB/wFmAQ4BAAH/AWYBDgEA
+        Af8BZgEOAQAB/wFiAVUBVAHvAxkBIwM9AWkBZgEOAQAB/wMnATsDMAFLAVQBNQEmAf0BZgEOAQAB/wFm
+        AQ4BAAH/AWYBDgEAAf8BZQFMAUYB9AMjATO4AAMHAQoDRQF9AWIBVgFUAe8BUwJPAaUDNQFWAxMBGgMr
+        BEIBdQFhAlwB3AFWAlUBsQMYASEYAAMLAQ8BVgJVAbQBYQJaAeQBagFBATUB+QFmAQ4BAAH/AVwCWAHR
+        AwYBCAFPAk4BlwFeAlwBzgM1AVcDFQEdAWICWAHpAWYBDgEAAf8BWQJCAfUBXgJYAd0DTAGTAwQBBrQA
+        AwQBBQFaAlcBvQFYAlYBwQMZASMDAQECDwABAQMQARUDRAF6AWQCWQHsAxoBJBgAAwIBAwMSARgDHwEs
+        AVICUAGjAVICUQGhAwcBCgNRAaIDVgG2AUUCRAF8AwoBDgFeAlsB2QFKAkkBiQMdASkDDQESvAADQQFy
+        AWQCWQHsAxYBHxwAAwgBCwNRAaIBWAJWAbkoAAMeASsBTQJMAZEDGAEiBAADLQFGA0oBigMTARrIAAFe
+        AlsB2QMhATAoAAFeAlsB2QMjATMkAAFHAkYBgAMTARoMAAMfAS0DLgFHxAADIAEuAWACXAHULAABVQJT
+        Aa0BTgJNAZUgAAMNAREBUgJQAaQQAAMKAQ4DUAGaAwQBBsAAAzwBZgNWAbYDIAEuA0wBkgFcAloBzQFc
+        AloBzQNMAZMDIAEuAwQBBQQAAw0BEgNCAXYBZgEOAQAB/wFmAQ4BAAH/AVwCWQHMIAADSAGFAyYBOQFI
+        AkcBgwM7AWUDBQEHA0MBdwE9AjwBZwM7AWMBPgI9AWrAAAM8AWYBZwFTAU8B8gFqAUEBNQH5AWYBDgEA
+        Af8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BagFBATUB+QNKAY0DDQESA1kBxwFmAQ4BAAH/AWYBDgEA
+        Af8BZgEOAQAB/wFcAlkBzCAAAUYCRQF+AxgBIgMaASUDNwFaAUkCSAGHAygBPQMmATgDGAEiAUcCRgGB
+        wAADNQFXAWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEA
+        Af8BZgEOAQAB/wFhAlsB4QFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AVcCVgG4IAABTAJL
+        AY8DMAFMAT0CPAFnAzgBXgMbASYDOgFiAzoBYQM1AVcBRQJEAXzEAAFiAUcBPwH2AWYBDgEAAf8BZgEO
+        AQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/
+        AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AzcBWiAAA04BmAI9ATwBZxQAA04BmQMxAU3EAANLAY4BZgEO
+        AQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/
+        AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AVwCWAHRAwcBCiAAA04BmANIAYYEAAMGAQgDHAEnBAADCAEL
+        AV0CWQHXAzEBTcQAAxYBHgFfAlcB6AFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEA
+        Af8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFlASsBJgH8AjEBMAFNJAABRgJFAX4BZwFT
+        AU8B8gNEAXkBXQJZAdIBZgEOAQAB/wNTAaoDUQGiAVkCQgH1AyABLsgAAxUBHQFgAlsB1gFmAQ4BAAH/
+        AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFmAQ4BAAH/AV0CTgHwAy8BSQMC
+        AQMkAAMYASIBWQJCAfUBZgEOAQAB/wFmAQ4BAAH/AWYBDgEAAf8BZgEOAQAB/wFnAVMBTwHyAy4BSNAA
+        AxUBHQFNAkwBkQFeAloB2AFfASMBIQH7AWYBDgEAAf8BZgEOAQAB/wFlAl4B5QFVAlMBrQMlATcwAAMh
+        ATADUQGiAVwCWQHMAVwCWQHMAVgCVgG5AzgBXQMBAQLgAAMhATADBAEG/wARAAFCAU0BPgcAAT4DAAEo
+        AwABUAMAARQDAAEBAQABAQUAAfAXAAP/AQABzwH/AZ8C/wcAAccB/wEYCQABxwH/ARgJAAHxAfwBOAEA
+        AQEHAAH4AXABfAEAAQEHAAH8AQEB/AEAAQEHAAH4AQAB/AEAAQEHAAHwAXABfgEAAQcHAAHxAfwBfwHi
+        AT8HAAHzAf8BPwHnAT8HAAHnAf8BPwHPAR8HAAHgAQgBPwHAAR8HAAHgAQABPwHAAR8HAAHgAQABPwHA
+        AR8HAAHwAQABPwHPAZ8HAAHwAQABPwHJAR8HAAHwAQABfwHAAR8HAAH4AQABfwHAAT8HAAH8AQEB/wHg
+        AT8HAAH/Ac8D/wcACw==
 </value>
   </data>
   <metadata name="memberMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>188, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAddStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAYCAYAAACSuF9OAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsOAAALDgFAvuFBAAAABmJL
+        R0QAAAAAAAD5Q7t/AAAAj0lEQVRIS+2WQQqAIBREO4rXyVt5VCHsGOVfDLQIxj8GSjjwIF6bh7loCynv
+        lVK5BmMNuwXNEAOKBb29GMYKYqwghjsIY05FOiGMOQX5k2HMeem6QxhzHrovNcZcK91BBsZcC/86IYw5
+        D3IQxpwXKQhjTsEdhDGn0n2pv2YFMaYMmukn/7SgaA8POYojpBxv1o2xX8GhcRQAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
