--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -142,12 +142,6 @@
   <data name="声音" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\声音.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="学生" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\学生.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="学生24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\学生24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="录音" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\录音.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -184,13 +178,19 @@
   <data name="群聊" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\群聊.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="老师" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\老师.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="老师24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\老师24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="视频" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\视频.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="主机端" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\主机端.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="主机端24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\主机端24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="客户端" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\客户端.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="客户端24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\客户端24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
