--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -193,4 +193,7 @@
   <data name="客户端24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\客户端24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="playvoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\playvoice.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
