--- a/NewTeacher/Team/TeamDiscuss.resx
+++ b/NewTeacher/Team/TeamDiscuss.resx
@@ -124,63 +124,63 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACW
-        CgAAAk1TRnQBSQFMAgEBAgEAAbABAAGwAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACS
+        CgAAAk1TRnQBSQFMAgEBAgEAAbgBAAG4AQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
         AwABFAMAAQEBAAEgBgABGRoAAygBPQNEAXk0AAMgAS8DSwGO/AADGAEhAV8CWAHjAxwBJywAAwYBCANV
         AbUDNgFZCAADPgFrAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHN
         AVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAyYBOKgA
-        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/
-        AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwEL
-        AQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wMSARmwAAFM
-        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFjAQsBAAH/AWMBCwEAAf8BYwEL
-        AQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFhAlgB5gFhAl0B4gFjAQsBAAH/AV4CWgHVAWMBCwEA
-        Af8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWACWgHeuAABOgI5AWABagFB
-        ATsB+QNTAaoDDAEQDAADBAEGAz8BbQFiAUgBRQH2AVkCVwG/AwQBBhQAAV4CWwHZAWMBCwEAAf8BYwEL
-        AQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wE9AjwBZwFOAk0BlgFjAQsBAAH/AzcCWgJYAcABYwEL
-        AQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AUcCRgGAvAADHAEoA04BmQFRATgBKQH9
-        AWECWgHkAVwCWQHMAWACWgHeAVkCQgH1AVwCWAHRAykBPhwAAzwBZgFjAQsBAAH/AWMBCwEAAf8BYwEL
-        AQAB/wFjAQsBAAH/AWIBWAFXAe8DGQEjAz0BaQFjAQsBAAH/AycBOwMwAUsBUQE4ASkB/QFjAQsBAAH/
-        AWMBCwEAAf8BYwELAQAB/wFlAVEBTAH0AyMBM7gAAwcBCgNFAX0BYgFYAVcB7wFTAk8BpQM1AVYDEwEa
-        AysEQgF1AWECXAHcAVYCVQGxAxgBIRgAAwsBDwFWAlUBtAFhAloB5AFqAUEBOwH5AWMBCwEAAf8BXAJY
-        AdEDBgEIAU8CTgGXAV4CXAHOAzUBVwMVAR0BYgJYAekBYwELAQAB/wFZAkIB9QFeAlgB3QNMAZMDBAEG
-        tAADBAEFAVoCVwG9AVgCVgHBAxkBIwMBAQIPAAEBAxABFQNEAXoBZAJZAewDGgEkGAADAgEDAxIBGAMf
-        ASwBUgJQAaMBUgJRAaEDBwEKA1EBogNWAbYBRQJEAXwDCgEOAV4CWwHZAUoCSQGJAx0BKQMNARK8AANB
-        AXIBZAJZAewDFgEfHAADCAELA1EBogFYAlYBuSgAAx4BKwFNAkwBkQMYASIEAAMtAUYDSgGKAxMBGsgA
-        AV4CWwHZAyEBMCgAAV4CWwHZAyMBMyQAAUcCRgGAAxMBGgwAAx8BLQMuAUfEAAMgAS4BYAJcAdQsAAFV
-        AlMBrQFOAk0BlSAAAw0BEQFSAlABpBAAAwoBDgNQAZoDBAEGwAADPAFmA1YBtgMgAS4DTAGSAVwCWgHN
-        AVwCWgHNA0wBkwMgAS4DBAEFBAADDQESA0IBdgFjAQsBAAH/AWMBCwEAAf8BXAJZAcwgAANIAYUDJgE5
-        AUgCRwGDAzsBZQMFAQcDQwF3AT0CPAFnAzsBYwE+Aj0BasAAAzwBZgFnAVcBVQHyAWoBQQE7AfkBYwEL
-        AQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFqAUEBOwH5A0oBjQMNARIDWQHHAWMBCwEAAf8BYwEL
-        AQAB/wFjAQsBAAH/AVwCWQHMIAABRgJFAX4DGAEiAxoBJQM3AVoBSQJIAYcDKAE9AyYBOAMYASIBRwJG
-        AYHAAAM1AVcBYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwEL
-        AQAB/wFjAQsBAAH/AWECWwHhAWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BVwJWAbggAAFM
-        AksBjwMwAUwBPQI8AWcDOAFeAxsBJgM6AWIDOgFhAzUBVwFFAkQBfMQAAWIBSAFFAfYBYwELAQAB/wFj
-        AQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEA
-        Af8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8DNwFaIAADTgGYAj0BPAFnFAADTgGZAzEBTcQAA0sBjgFj
-        AQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEA
-        Af8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BXAJYAdEDBwEKIAADTgGYA0gBhgQAAwYBCAMcAScEAAMI
-        AQsBXQJZAdcDMQFNxAADFgEeAV8CVwHoAWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwEL
-        AQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWIBKwEpAfwCMQEwAU0kAAFGAkUBfgFn
-        AVcBVQHyA0QBeQFdAlkB0gFjAQsBAAH/A1MBqgNRAaIBWQJCAfUDIAEuyAADFQEdAWACWwHWAWMBCwEA
-        Af8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWMBCwEAAf8BXQJOAfADLwFJ
-        AwIBAyQAAxgBIgFZAkIB9QFjAQsBAAH/AWMBCwEAAf8BYwELAQAB/wFjAQsBAAH/AWcBVwFVAfIDLgFI
-        0AADFQEdAU0CTAGRAV4CWgHYAV8BIwEhAfsBYwELAQAB/wFjAQsBAAH/AWUCXgHlAVUCUwGtAyUBNzAA
-        AyEBMANRAaIBXAJZAcwBXAJZAcwBWAJWAbkDOAFdAwEBAuAAAyEBMAMEAQb/ABEAAUIBTQE+BwABPgMA
-        ASgDAAFQAwABFAMAAQEBAAEBBQAB8BcAA/8BAAHPAf8BnwL/BwABxwH/ARgJAAHHAf8BGAkAAfEB/AE4
-        AQABAQcAAfgBcAF8AQABAQcAAfwBAQH8AQABAQcAAfgBAAH8AQABAQcAAfABcAF+AQABBwcAAfEB/AF/
-        AeIBPwcAAfMB/wE/AecBPwcAAecB/wE/Ac8BHwcAAeABCAE/AcABHwcAAeABAAE/AcABHwcAAeABAAE/
-        AcABHwcAAfABAAE/Ac8BnwcAAfABAAE/AckBHwcAAfABAAF/AcABHwcAAfgBAAF/AcABPwcAAfwBAQH/
-        AeABPwcAAf8BzwP/BwAL
+        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/
+        AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEK
+        AQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wMSARmwAAFM
+        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFiAQoBAAH/AWIBCgEAAf8BYgEK
+        AQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFhAlgB5gFhAl0B4gFiAQoBAAH/AV4CWgHVAWIBCgEA
+        Af8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWACWgHeuAABOgI5AWABagFB
+        AT0B+QNTAaoDDAEQDAADBAEGAz8BbQFiAUgBRwH2AVkCVwG/AwQBBhQAAV4CWwHZAWIBCgEAAf8BYgEK
+        AQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wE9AjwBZwFOAk0BlgFiAQoBAAH/AzcCWgJYAcABYgEK
+        AQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AUcCRgGAvAADHAEoA04BmQFQATkBKgH9
+        AWECWgHkAVwCWQHMAWACWgHeAVkCQgH1AVwCWAHRAykBPhwAAzwBZgFiAQoBAAH/AWIBCgEAAf8BYgEK
+        AQAB/wFiAQoBAAH/AWICWAHvAxkBIwM9AWkBYgEKAQAB/wMnATsDMAFLAVABOQEqAf0BYgEKAQAB/wFi
+        AQoBAAH/AWIBCgEAAf8BZQFSAU4B9AMjATO4AAMHAQoDRQF9AWICWAHvAVMCTwGlAzUBVgMTARoDKwRC
+        AXUBYQJcAdwBVgJVAbEDGAEhGAADCwEPAVYCVQG0AWECWgHkAWoBQQE9AfkBYgEKAQAB/wFcAlgB0QMG
+        AQgBTwJOAZcBXgJcAc4DNQFXAxUBHQFiAlgB6QFiAQoBAAH/AVkCQgH1AV4CWAHdA0wBkwMEAQa0AAME
+        AQUBWgJXAb0BWAJWAcEDGQEjAwEBAg8AAQEDEAEVA0QBegFkAlkB7AMaASQYAAMCAQMDEgEYAx8BLAFS
+        AlABowFSAlEBoQMHAQoDUQGiA1YBtgFFAkQBfAMKAQ4BXgJbAdkBSgJJAYkDHQEpAw0BErwAA0EBcgFk
+        AlkB7AMWAR8cAAMIAQsDUQGiAVgCVgG5KAADHgErAU0CTAGRAxgBIgQAAy0BRgNKAYoDEwEayAABXgJb
+        AdkDIQEwKAABXgJbAdkDIwEzJAABRwJGAYADEwEaDAADHwEtAy4BR8QAAyABLgFgAlwB1CwAAVUCUwGt
+        AU4CTQGVIAADDQERAVICUAGkEAADCgEOA1ABmgMEAQbAAAM8AWYDVgG2AyABLgNMAZIBXAJaAc0BXAJa
+        Ac0DTAGTAyABLgMEAQUEAAMNARIDQgF2AWIBCgEAAf8BYgEKAQAB/wFcAlkBzCAAA0gBhQMmATkBSAJH
+        AYMDOwFlAwUBBwNDAXcBPQI8AWcDOwFjAT4CPQFqwAADPAFmAWcBWAFWAfIBagFBAT0B+QFiAQoBAAH/
+        AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWoBQQE9AfkDSgGNAw0BEgNZAccBYgEKAQAB/wFiAQoBAAH/
+        AWIBCgEAAf8BXAJZAcwgAAFGAkUBfgMYASIDGgElAzcBWgFJAkgBhwMoAT0DJgE4AxgBIgFHAkYBgcAA
+        AzUBVwFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/
+        AWIBCgEAAf8BYQJbAeEBYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFXAlYBuCAAAUwCSwGP
+        AzABTAE9AjwBZwM4AV4DGwEmAzoBYgM6AWEDNQFXAUUCRAF8xAABYgFIAUcB9gFiAQoBAAH/AWIBCgEA
+        Af8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFi
+        AQoBAAH/AWIBCgEAAf8BYgEKAQAB/wM3AVogAANOAZgCPQE8AWcUAANOAZkDMQFNxAADSwGOAWIBCgEA
+        Af8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFi
+        AQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFcAlgB0QMHAQogAANOAZgDSAGGBAADBgEIAxwBJwQAAwgBCwFd
+        AlkB1wMxAU3EAAMWAR4BXwJXAegBYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/
+        AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYQErASoB/AIxATABTSQAAUYCRQF+AWcBWAFW
+        AfIDRAF5AV0CWQHSAWIBCgEAAf8DUwGqA1EBogFZAkIB9QMgAS7IAAMVAR0BYAJbAdYBYgEKAQAB/wFi
+        AQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BYgEKAQAB/wFdAk4B8AMvAUkDAgED
+        JAADGAEiAVkCQgH1AWIBCgEAAf8BYgEKAQAB/wFiAQoBAAH/AWIBCgEAAf8BZwFYAVYB8gMuAUjQAAMV
+        AR0BTQJMAZEBXgJaAdgBXwEjASEB+wFiAQoBAAH/AWIBCgEAAf8BZQJeAeUBVQJTAa0DJQE3MAADIQEw
+        A1EBogFcAlkBzAFcAlkBzAFYAlYBuQM4AV0DAQEC4AADIQEwAwQBBv8AEQABQgFNAT4HAAE+AwABKAMA
+        AVADAAEUAwABAQEAAQEFAAHwFwAD/wEAAc8B/wGfAv8HAAHHAf8BGAkAAccB/wEYCQAB8QH8ATgBAAEB
+        BwAB+AFwAXwBAAEBBwAB/AEBAfwBAAEBBwAB+AEAAfwBAAEBBwAB8AFwAX4BAAEHBwAB8QH8AX8B4gE/
+        BwAB8wH/AT8B5wE/BwAB5wH/AT8BzwEfBwAB4AEIAT8BwAEfBwAB4AEAAT8BwAEfBwAB4AEAAT8BwAEf
+        BwAB8AEAAT8BzwGfBwAB8AEAAT8ByQEfBwAB8AEAAX8BwAEfBwAB+AEAAX8BwAE/BwAB/AEBAf8B4AE/
+        BwAB/wHPA/8HAAs=
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnAddStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACQAAAAYCAYAAACSuF9OAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsMAAALDAE/QCLIAAAABmJL
-        R0QAAAAAAAD5Q7t/AAAAj0lEQVRIS+2WQQqAIBREO4rXyVt5VCHsGOVfDLQIxj8GSjjwIF6bh7loCynv
-        lVK5BmMNuwXNEAOKBb29GMYKYqwghjsIY05FOiGMOQX5k2HMeem6QxhzHrovNcZcK91BBsZcC/86IYw5
-        D3IQxpwXKQhjTsEdhDGn0n2pv2YFMaYMmukn/7SgaA8POYojpBxv1o2xX8GhcRQAAAAASUVORK5CYII=
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsMAAALDAE/QCLIAAAAj0lE
+        QVRIS+2WQQqAIBREO4rXyVt5VCHsGOVfDLQIxj8GSjjwIF6bh7loCynvlVK5BmMNuwXNEAOKBb29GMYK
+        YqwghjsIY05FOiGMOQX5k2HMeem6QxhzHrovNcZcK91BBsZcC/86IYw5D3IQxpwXKQhjTsEdhDGn0n2p
+        v2YFMaYMmukn/7SgaA8POYojpBxv1o2xX8GhcRQAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="memberMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
